# python-sqlalchemy-alembic

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
project/: engine.py
project/alembic/: env.py
project/alembic/versions/: e619f1bd1eee_initial_migration.py
project/exception/: __init__.py
project/models/: __init__.py
tests/: test_engine.py  teste_migrate_tables.py
