[tool.poetry]
name = "python-sqlalchemy-alembic"
version = "0.1.0"
description = ""
authors = ["Mailson Teles Borges <telesborges@outlook.com>"]
readme = "README.md"
packages = [{include = "project"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
